# djangoProject

django_project/: pyproject.toml
django_project/apps/: admin.py  models.py  views.py
django_project/apps/management/commands/: add_product.py
django_project/apps/migrations/: 0001_initial.py
django_project/django_project/: settings.py  urls.py
django_project/templates/: index.html
